--- a/htmlcss/step-project/style.css
+++ b/htmlcss/step-project/style.css
@@ -1,12 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 /* A: kodlari format edek z/o [shift+alt+f] */
+/* S: done ✅ */
+
+:root {
+  font-size: 20px;
+}
+
 .container {
   max-width: 70vw;
   margin: 0 auto;
   font-family: "Roboto", sans-serif;
 }
 .header {
-  font-size: 45px;
+  font-size: 2rem;
 }
 .main {
   display: flex;
@@ -15,7 +21,7 @@
 .text {
   display: flex;
   flex-direction: column;
-  font-size: 20px;
+  font-size: 1rem;
   flex-basis: 50%;
 }
 
@@ -35,7 +41,7 @@
   margin-top: 40px;
   display: flex;
   flex-wrap: wrap;
-  font-size: 14px;
+  font-size: 1.75rem;
 }
 
 .footer img {
@@ -45,7 +51,7 @@
 }
 
 h2 {
-  font-size: 25px;
+  font-size: 1.25rem;
 }
 
 .footer .text1 {
@@ -58,17 +64,25 @@ h2 {
 }
 
 .text1 p {
-  font-size: 15px;
+  font-size: 0.75rem;
 }
+
+/* tablet */
 
 @media (max-width: 830px) {
   /* A: font-size-lari root-a bagli edek. rem-lerle verek */
+  /* S: done ✅ */
+
+  :root {
+    font-size: 15px;
+  }
+
   .header {
-    font-size: 35px;
+    font-size: 2rem;
   }
 
   .text {
-    font-size: 16px;
+    font-size: 1rem;
   }
 
   .main {
@@ -93,7 +107,7 @@ h2 {
   }
 
   h2 {
-    font-size: 20px;
+    font-size: 1.3rem;
   }
 
   .footer {
@@ -101,17 +115,23 @@ h2 {
   }
 
   .text1 p {
-    font-size: 12px;
+    font-size: 0.85rem;
   }
 }
 
+/* mobile */
+
 @media (max-width: 380px) {
+  :root {
+    font-size: 10px;
+  }
+
   .header {
-    font-size: 30px;
+    font-size: 2.75rem;
   }
 
   .text {
-    font-size: 13px;
+    font-size: 1.3rem;
   }
 
   .main img {
@@ -120,13 +140,12 @@ h2 {
   }
 
   h2 {
-    font-size: 15px;
+    font-size: 1.5rem;
   }
 
   .text1 p {
-    font-size: 10px;
+    font-size: 1rem;
   }
   /* A: bos selector */
-  .footer .text1 {
-  }
+  /* S: done ✅ */
 }
